fix overflow error

--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,7 @@
+html {
+    width: 100%;
+}
+
 #header {
     position: fixed;
     left: 50%;
